app/styles/_pipeline.less
/* ... */
@keyframes flexShrink {
  to {
    .flex-basis(@width: 1);
    .flex-grow(@grow: 0.000001);
    .flex-shrink(@shrink: 1);
  }
}

@keyframes progress-line {
  from {
    width: 0;
  }
  to {
    width: @progress-line;
  }
}

@keyframes progress-rail {
  to {
    transform: translateX(400%)
  }
}

@keyframes progress {
  from {
    -webkit-transform: rotate(0);
    transform: rotate(0);
  }
  to {
    -webkit-transform: rotate(180deg);
    transform: rotate(180deg);
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;

  }
  to {
    opacity: 1;
  }
}

@keyframes fadeOut {
  from {
    background-color: @build-pipeline-pending-color;
  }
  to {
    background-color: transparent;
  }
}

// Solid circle backgrounds
@keyframes fadeInSuccess {
  to {background-color: @build-pipeline-success-color;}
}

@keyframes fadeInFailed {
  to {background-color: @build-pipeline-failed-color;}
}

@keyframes fadeInProgress {
  to {background-color: @build-pipeline-in-progress-color;}
}

@keyframes fadeInAborted {
  to {background-color: @build-pipeline-aborted-color;}
}

@keyframes fadeInNotExecuted {
  to {background-color: @build-pipeline-pending-color;}
}

.build-pipeline {
  border: 1px solid @build-pipeline-border-color;
  border-top-width: 2px;
  &:first-child {
    border-top-width: 1px;
  }
}

.pipeline-container {
  .flex(@columns: 1 1 auto);
  overflow: hidden;
}
.pipeline {
  .flex-display(@display: flex);
  .flex-wrap(@wrap: wrap);
  height: 100%;
  padding: 0 (@pipeline-padding / 2);
  .overview & {
    background-color: #fff;
  }
  .pipeline-stage {
    // need to use flex-basis: auto and width because of IE11 bug
    .flex(@columns: 0 0 auto);
    min-height: 96px;
    padding: (@pipeline-padding + 5) @pipeline-padding  (@pipeline-padding * 3) @pipeline-padding;
    position: relative;
    width: 100%;
    // add arrow after each stage
    &:before {
      bottom: 0;
      color:  darken(@build-pipeline-border-color, 5%);
      content: '\2193';
      font-size: 22px;
      left: 0;
      line-height: 1;
      position: absolute;
      right: 0;
      text-align: center;
    }
    // hide arrow on last stage
    &:last-child:before {
      display: none;
    }
    &.no-stages {
      align-items: center;
      display: flex;
      // so that .pipeline-stage-name doesn't truncate
      width: auto !important;
      &:before {
        display: none;
      }
      .pipeline-stage-name {
        margin-bottom: 0;
      }
    }
  }
}

.new-stage {
  animation: flexGrow @line-grow-animation-time ease forwards;
  .flex-basis(@width: 1);
  .flex-grow(@grow: 0.000001);
  .flex-shrink(@shrink: 1);
}

.remove-stage {
  animation: flexShrink @line-grow-animation-time ease forwards;
  .flex(@columns: 1 1 0%);
}

.pipeline-stage-name, .pipeline-time, .pipeline-actions {
  font-size: (@font-size-base - 1);
  text-align: center;
}
.pipeline-stage-name {
  .truncate();
  line-height: initial;
  margin-bottom: @pipeline-padding + 5px;
}
.pipeline-time, .pipeline-actions {
  margin-top: 12px;
  .text-muted();
  &.IN_PROGRESS {
    color: @gray;
  }
  .overview & {
    background-color: #fff;
  }
}

[class^="build-pipeline"] {
  .status-icon {
    &.Complete {
      color: @build-pipeline-success-color;
    }
    &.Failed{
      color: @build-pipeline-failed-color;
    }
  }
}

.build-links {
  .pipeline-link {
    display: inline-block;
  }
  .pipeline-link + .pipeline-link:before {
    border-left: 1px solid @build-pipeline-border-color;
    content: '';
    display: inline-block;
    height: 12px;
    margin-right: 3px;
    margin: 0 5px -2px 2px;
  }
}

.build-links, .build-name, .build-phase, .build-timestamp {
  padding: 0 10px;
}

.build-links, .build-timestamp {
  padding-top: 2px;
  .small();
}

.build-phase .status-icon {
  margin-right: 2px;
  .spinner.spinner-inline {
    margin-right: 0;
  }
}

.build-summary, .stage {
  .text-center();
}

.build-summary {
  border-bottom: 1px solid @build-pipeline-border-color;
  .flex-display(flex);
  .flex-direction(@direction: row);
  .flex-wrap(@wrap: wrap);
  .justify-content(@justify: space-around);
  padding: 5px;
  position: relative;
  .overview & {
    background-color: #fff;
  }
}

.build-timestamp {
  .text-muted();
}

@media (min-width: 400px) {
  .pipeline .pipeline-stage {
    padding-right: (@pipeline-padding * 5.2);
    padding-bottom: (@pipeline-padding + 5);
    width: 50%;
    &:before {
      bottom: auto;
      content: '\2192';
      left: auto;
      right: 10px;
      top: 37%;
    }
  }
}

@media (min-width: 600px) {
  .build-links, .build-timestamp {
    padding-top: 0;
  }
  .build-pipeline {
    .flex-direction(@direction: row);
    .flex-display(@display: flex);
    .build-name {
      white-space: nowrap;
    }
  }
  .build-summary {
    border-bottom-width: 0;
    border-right: 1px solid @build-pipeline-border-color;
    .flex(@columns: 0 0 175px);
    .flex-direction(@direction: column);
    .justify-content(@justify: center);
  }
}

@media (min-width: @screen-md-min) {
  .pipeline .pipeline-stage {
    width: 33.333333%;
  }
}

@media (min-width: @screen-lg-min) {
  .pipeline .pipeline-stage {
    width: 25%;
  }
}

.pipeline-status-bar  {
  .pipeline-line:before,
  .clip1:before,
  .clip2:before {
    background-color: @build-pipeline-pending-color;
  }
  .inner-circle-fill {
    background-color: @inner-circle-color;
    opacity: 0;
  }
}
.pipeline-status-bar.SUCCESS  {
  .pipeline-line:before,
  .clip1:before,
  .clip2:before,
  .inner-circle-fill {
    background-color: @build-pipeline-success-color;
  }
  .pipeline-circle {
    animation: fadeInSuccess 0s (@line-animation-time + @circle-animation-time) linear forwards;
    &:after {
      content: "\f00c";
    }
  }
}
/* ... */

